
=======================================================
		WanT code:  Log of Changes 
=======================================================


21 Jun 2012     write_ham.f90 (written by MBN) inlcuded in the main distribution. (AF)

08 Jun 2012     implementation of the atmproj basis done (minimal working case). (AF)

07 Jun 2012     atomicproj_tools.f90 added: it is meant to convert atomic projection data
		from QE to produce a real-space representation of the KS Hamiltonian. (AF)

06 Jun 2012     cp2k_tools.f90 added; interface to cp2k (transport only) implemented and
		testing started. The contribution of C.A. Pignedoli and L. Talirz is
		acknowledged. Interface is working. (AF)

25 May 2012     qexml.f90 updated to deal with QE-5.0 (CELL_SYMMETRY now optional). (AF)

13 Apr 2012     midpoint.f90 generalized to deal with lower bound cutoff. (AF)

23 Feb 2012     qexml.f90 changed to allow postprocessing of CP runs. 
		Inclusion of magma libs started. (AF)

10 Feb 2012     CUDA implementation compiling and running, but still crashing. (AF)

01 Feb 2012     branch for version 2.4.0 started (v2.4.0 almost release compliant).
		version number in trunk changed to 2.5.0_alpha1 . Inclusion of
		phiGEMM (CUDA and GPU) started (thanks also to Filippo Spiga). 
		conf/ directory renamed to config. (AF)

-------------------------------------------------
Date: 01 Feb 2012    Version: WanT-2.4.0
-------------------------------------------------

Jan 30 2012     util.f90 updated; some calls to utile wrappers renamed. (AF)

Jan 10 2012     bug fixed in libs/files.f90 (tags pointer was not nullified). (AF)

Nov 25 2011     sax2qexml implementation completed (gkvectors re-written). (AF)

Nov 07 2011     sax2qexml utilities added. Bug fixed in qexml_write_wfc.
		c_mkdir updated to c_mkdir_int (QE-4.3). (AF)

Nov 02 2011     bug fixed in util.f90 in zmat_diag (the input matrix is
		overwritten). Courtesy of Eleonora Luppi. (AF)
